--- a/CSS Folder/Desktop View/1024px.css
+++ b/CSS Folder/Desktop View/1024px.css
@@ -6,7 +6,7 @@
     }
     
     .container #home .imageCon img {
-        width: 100%;
+        width: 40vw;
     }
 
     .container #home .infoCon .textCon .text1 {
