--- a/CSS Folder/Phone View/425px.css
+++ b/CSS Folder/Phone View/425px.css
@@ -28,7 +28,7 @@
     }
 
     .container #home .imageCon img {
-        width: 100%;
+        width: 80vw;
     }
 
     .container #home .infoCon .textCon .text2 {
